# states3

./: Cargo.toml
src/: main.rs  simple_test_machine.rs  traffic_light.rs  xstate_user.rs
src/old_traffic_light/: mod.rs
src/old_traffic_light/states/: green.rs  mod.rs  specific.rs
src/traffic_light/: bin.rs  context.rs  events.rs  generic_state.rs  green_state.rs  keyboard_events.rs  machine.rs  mod.rs  red_state.rs  runner.rs  states.rs  types.rs  yellow_state.rs
src/traffic_light/states/: generic.rs  mod.rs  red.rs  specific.rs  yellow.rs
src/xstate/: lib.rs  machine.rs  mod.rs  traffic_light.rs  xstate.rs
