[package]
name = "states3"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "xstate"
path = "src/xstate/lib.rs"

[[bin]]
name = "traffic_light"
path = "src/traffic_light/bin.rs"

[dependencies]
tokio = { version = "^1.0", features = ["rt-multi-thread", "macros", "sync", "time", "io-std"] }
tokio-util = { version = "^0.6", features = ["codec"] }
tokio-stream = "^0.1"
async-trait = "^0.1"